First working draft, minimalistic

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <script type="text/javascript" src="index.js" defer></script>
   </head>
   <body>
-    <header>
+    <!-- <header>
       <a href="#home"><img class="black-icon" src="black-icon.svg"/></a>
       <a href="#">Nosotros</a>
       <a href="#productos">Productos</a>
       <a href="#contacto">Contacto</a>
-    </header>
+    </header> -->
     <main>
       <section id="home">
         <img src="logo.png"/>
@@ -38,17 +38,17 @@
       <hr />
       <section id="productos">
         <h3>PRODUCTOS</h3>
-        <div class="slider-for">
-          <img data-lazy="img/humita-0.jpg"/>
-          <img data-lazy="img/humita-0.jpg"/>
-          <img data-lazy="img/humita-0.jpg"/>
-          <img data-lazy="img/humita-0.jpg"/>
+        <div class="slider slider-for">
+          <img src="img/humita-0.jpg"/>
+          <img src="img/humita-1.jpg"/>
+          <img src="img/humita-2.jpg"/>
+          <img src="img/humita-3.jpg"/>
         </div>
-        <div class="slider-nav">
-          <img data-lazy="img/humita-0.jpg"/>
-          <img data-lazy="img/humita-1.jpg"/>
-          <img data-lazy="img/humita-2.jpg"/>
-          <img data-lazy="img/humita-3.jpg"/>
+        <div class="slider slider-nav">
+          <img src="img/humita-0.jpg"/>
+          <img src="img/humita-1.jpg"/>
+          <img src="img/humita-2.jpg"/>
+          <img src="img/humita-3.jpg"/>
         </div>
       </section>
     </main>
@@ -59,8 +59,12 @@
         Miraflores 1121, Lampa. Región Metropolitana
       </p>
       <div class="social">
-        <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+        <a href="https://www.facebook.com/campofernandezoficial/" target="_blank">
+          <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/_CampoFernandez" target="_blank">
+          <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+        </a>
       </div>
     </footer>
   </body>
