Updating texts and starting contact form

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3>WWW.CAMPOFERNANDEZ.CL</h3>
       </section>
       <hr />
-      <section id="productos">
+      <section id="products">
         <h3>PRODUCTOS</h3>
         <div class="slider slider-for">
           <img src="img/humita-0.jpg"/>
@@ -51,14 +51,20 @@
           <img src="img/humita-2.jpg"/>
           <img src="img/humita-3.jpg"/>
         </div>
-        <div class="slider details">
+        <div class="details">
           <div>
             <h4>Humita</h4>
-            <h7>&nbsp</h7>
+            <!-- <h7>&nbsp</h7> -->
             <hr />
             <img src="img/humita.png"/>
             <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+              Elaborada a base de choclo molido, cebolla, manteca de palma,
+              ají de color, albahaca y sal. Las humitas se envuelven en hojas
+              del choclo seleccionadas y se amarran para poner a cocer en agua.
+              En cuanto a los aliños, la albahaca toma un papel predominante,
+              sin sobrepasar su sabor sobre el resto de los condimentos.
+              En el proceso de producción, no existe la adición de ningún
+              ingrediente artificial, ya sea preservante ni conservantes.
             </p>
           </div>
           <div>
@@ -69,7 +75,11 @@
                 <hr />
                 <img src="img/pino.png"/>
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                  Elaborado con papa natural, carne de vacuno certificada con
+                  10% de materia grasa, cebolla y aliños utilizados para que se
+                  resalten los sabores característicos de la papa rellena.
+                  Presentada en un envase(estuche) cuya capacidad es de 2 papas
+                  rellenas.
                 </p>
               </div>
               <div>
@@ -77,7 +87,8 @@
                 <hr />
                 <img src="img/queso.png"/>
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                  Elaborado con puré de papa natural y queso. Presentada en un
+                  envase(estuche) cuya capacidad es de 2 papas rellenas.
                 </p>
               </div>
               <div>
@@ -85,46 +96,31 @@
                 <hr />
                 <img src="img/queso_jamon.png"/>
                 <p>
-                  Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                  Elaborado con puré de papa natural, jamón de cerdo y queso.
+                  Presentada en un envase(estuche) cuya capacidad es de 2 papas
+                  rellenas.
                 </p>
               </div>
             </div>
           </div>
-          <!-- <div>
-            <h3>Papa rellena</h3>
-            <h7>Pino</h7>
-            <hr />
-            <img src="img/pino.png"/>
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            </p>
-          </div>
-          <div>
-            <h3>Papa rellena</h3>
-            <h7>Queso</h7>
-            <hr />
-            <img src="img/queso.png"/>
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            </p>
-          </div>
-          <div>
-            <h3>Papa rellena</h3>
-            <h7>Queso y jamón</h7>
-            <hr />
-            <img src="img/queso_jamon.png"/>
-            <p>
-              Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
-            </p>
-          </div> -->
         </div>
-
+      </section>
+      <hr />
+      <section id="contact">
+        <h3>CONTACTO</h3>
+        <form>
+          <input name="name" type="text" placeholder="Nombre"/>
+          <input name="email" type="email" placeholder="Mail" required/>
+          <input name="phone" type="phone" placeholder="Teléfono"/>
+          <textarea rows="6" placeholder="Consulta" required></textarea>
+          <button type="submit">Enviar</button>
+        </form>
       </section>
     </main>
-    <footer id="contacto">
+    <footer>
       <hr />
       <p>
-        info@campofernandez.com - 228423802 -<br />
+        <span name="email">info@campofernandez.com</span> - <span name="phone">228423802</span> -<br />
         Miraflores 1121, Lampa. Región Metropolitana
       </p>
       <div class="social">
