Fixing some texts

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
         </div>
         <div class="details">
           <div>
-            <h4>Humita</h4>
+            <h4>Humitas</h4>
             <!-- <h7>&nbsp</h7> -->
             <hr />
             <img src="img/humita.png"/>
             <p>
-              Elaborada a base de choclo molido, cebolla, manteca de palma,
+              Elaboradas a base de choclo molido, cebolla, manteca de palma,
               ají de color, albahaca y sal. Las humitas se envuelven en hojas
               del choclo seleccionadas y se amarran para poner a cocer en agua.
               En cuanto a los aliños, la albahaca toma un papel predominante,
@@ -72,14 +72,14 @@
             </p>
           </div>
           <div>
-            <h3>Papa rellena</h3>
+            <h3>Papas rellenas</h3>
             <div class="papa-details">
               <div>
                 <h7>Pino</h7>
                 <hr />
                 <img src="img/pino.png"/>
                 <p>
-                  Elaborado con papa natural, carne de vacuno certificada con
+                  Elaboradas con papa natural, carne de vacuno certificada con
                   10% de materia grasa, cebolla y aliños utilizados para que se
                   resalten los sabores característicos de la papa rellena.
                   Presentada en un envase (estuche) cuya capacidad es de 2 papas
@@ -91,7 +91,7 @@
                 <hr />
                 <img src="img/queso.png"/>
                 <p>
-                  Elaborado con puré de papa natural y queso.<br />
+                  Elaboradas con puré de papa natural y queso.<br />
                   Presentada en un envase (estuche) cuya capacidad es de 2 papas
                   rellenas.
                 </p>
@@ -101,7 +101,7 @@
                 <hr />
                 <img src="img/queso_jamon.png"/>
                 <p>
-                  Elaborado con puré de papa natural, jamón de cerdo y queso.<br />
+                  Elaboradas con puré de papa natural, jamón de cerdo y queso.<br />
                   Presentada en un envase (estuche) cuya capacidad es de 2 papas
                   rellenas.
                 </p>
