Implementing smooth scroll and improving page load

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="black-icon.svg" color="#5bbad5">
     <title>Campo Fernandez</title>
-    <script src="https://use.fontawesome.com/e72c7bffbf.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-            crossorigin="anonymous" defer>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" defer/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css" defer/>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous" defer></script>
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js" defer></script>
     <script type="text/javascript" src="index.js" defer></script>
+    <script src="https://use.fontawesome.com/e72c7bffbf.js" async></script>
     <link rel="stylesheet" type="text/css" href="index.css"/>
   </head>
   <body>
