Adding name to consulta

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <input name="name" type="text" placeholder="Nombre" required/>
           <input name="email" type="email" placeholder="Mail" required/>
           <input name="phone" type="phone" placeholder="Teléfono"/>
-          <textarea rows="6" placeholder="Consulta" required></textarea>
+          <textarea name="consulta" rows="6" placeholder="Consulta" required></textarea>
           <button type="submit">Enviar</button>
         </form>
       </section>
