--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campo Fernandez</title>
     <meta name="theme-color" content="#ffffff">
-    <meta name="author" content="tomyo">
+    <meta name="author" content="tomas@ha-team.co">
+    <meta name="description" content="Campo Fernandez: Humitas y papas rellenas.">
     <!-- <link rel="icon" href="favicon.ico"> -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="manifest.json">
     <link rel="mask-icon" href="black-icon.svg" color="#5bbad5">
-    <title>Campo Fernandez</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css" defer/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css" defer/>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
