Aviso de falta de pagos

--- a/index.html
+++ b/index.html
@@ -25,132 +25,6 @@
     <link rel="stylesheet" type="text/css" href="index.css"/>
   </head>
   <body>
-    <header>
-      <a rel="nofollow" href="#home"><img class="icon" src="icon.svg"/></a>
-      <!-- <a rel="nofollow" href="#">Nosotros</a> -->
-      <a rel="nofollow" href="#products">Productos</a>
-      <a rel="nofollow" href="#contact">Contacto</a>
-    </header>
-    <main>
-      <section id="home">
-        <img src="logo.png"/>
-        <h3><a href="https://www.campofernandez.cl">WWW.CAMPOFERNANDEZ.CL</a></h3>
-        <a class="contact-link button" href="#contact">
-          CONTÁCTANOS
-        </a>
-      </section>
-      <hr />
-
-      <section id="products">
-        <h3>PRODUCTOS</h3>
-        <div class="slider slider-for">
-          <img src="img/humita-0.jpg"/>
-          <img src="img/humita-1.jpg"/>
-          <img src="img/humita-2.jpg"/>
-          <img src="img/humita-3.jpg"/>
-        </div>
-        <div class="slider slider-nav">
-          <img src="img/humita-0.jpg"/>
-          <img src="img/humita-1.jpg"/>
-          <img src="img/humita-2.jpg"/>
-          <img src="img/humita-3.jpg"/>
-        </div>
-        <div class="details">
-          <div>
-            <h4>Humitas</h4>
-            <!-- <h7>&nbsp</h7> -->
-            <hr />
-            <img src="img/humita.png"/>
-            <p>
-              Elaboradas a base de choclo molido, cebolla, manteca de palma,
-              ají de color, albahaca y sal. Las humitas se envuelven en hojas
-              del choclo seleccionadas y se amarran para poner a cocer en agua.
-              En cuanto a los aliños, la albahaca toma un papel predominante,
-              sin sobrepasar su sabor sobre el resto de los condimentos.
-              En el proceso de producción, no existe la adición de ningún
-              ingrediente artificial, ya sea preservante ni conservantes.
-            </p>
-          </div>
-          <div>
-            <h3>Papas rellenas</h3>
-            <div class="papa-details">
-              <div>
-                <h7>Pino</h7>
-                <hr />
-                <img src="img/pino.png"/>
-                <p>
-                  Elaboradas con papa natural, carne de vacuno certificada con
-                  10% de materia grasa, cebolla y aliños utilizados para que se
-                  resalten los sabores característicos de la papa rellena.
-                  Presentada en un envase (estuche) cuya capacidad es de 2 papas
-                  rellenas.
-                </p>
-              </div>
-              <div>
-                <h7>Queso</h7>
-                <hr />
-                <img src="img/queso.png"/>
-                <p>
-                  Elaboradas con puré de papa natural y queso.<br />
-                  Presentada en un envase (estuche) cuya capacidad es de 2 papas
-                  rellenas.
-                </p>
-              </div>
-              <div>
-                <h7>Queso y jamón</h7>
-                <hr />
-                <img src="img/queso_jamon.png"/>
-                <p>
-                  Elaboradas con puré de papa natural, jamón de cerdo y queso.<br />
-                  Presentada en un envase (estuche) cuya capacidad es de 2 papas
-                  rellenas.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <hr />
-      <section class="show-on-target" id="contact">
-        <h3>CONTACTO</h3>
-        <form action="https://formspree.io/contacto@campofernandez.com" method="post">
-          <input type="hidden" name="_next" value="https://campofernandez.cl#thanks" />
-          <input type="hidden" name="_subject" value="Consulta web!" />
-          <input type="hidden" name="_cc" value="tomas@ha-team.co" />
-          <input type="text" name="_gotcha" style="display:none" />
-          <input name="name" type="text" placeholder="Nombre" required/>
-          <input name="email" type="email" placeholder="Mail" required/>
-          <input name="phone" type="phone" placeholder="Teléfono"/>
-          <textarea name="consulta" rows="6" placeholder="Consulta" required></textarea>
-          <button type="submit">Enviar</button>
-        </form>
-      </section>
-      <section id="show-contact-form-button" class="js-hide-on-target" data-target="#contact">
-        <a class="contact-link button js-fast-scroll" href="#contact">
-          CONTÁCTANOS
-        </a>
-      </section>
-      <section class="show-on-target" id="thanks">
-        <h3>¡GRACIAS POR ESCRIBIRNOS!</h3>
-        <p>
-          Te contactaremos a la brevedad.
-        </p>
-      </section>
-    </main>
-    <footer>
-      <hr />
-      <p>
-        <span name="email">info@campofernandez.com</span> - <span name="phone">228423802</span> -<br />
-        Miraflores 1121, Lampa. Región Metropolitana
-      </p>
-      <div class="social">
-        <a class="unstyled" href="https://www.facebook.com/campofernandezoficial/" target="_blank">
-          <i class="fa fa-facebook fa-2x" aria-hidden="true"></i>
-        </a>
-        <a class="unstyled" href="https://twitter.com/_CampoFernandez" target="_blank">
-          <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-        </a>
-      </div>
-    </footer>
+        Contactarse con pagos@ha-team.co para reactivar servicio.
   </body>
 </html>
